package controller;

public class ExitException extends Exception{
    public ExitException(String message){
        super(message);
    }
}
