package controller;

import model.user.Utente;
import view.View;

public class Logout implements Handler {
    @Override
    public Utente execute(Utente utente, View view) {
        return null;
    }
}
